--- a/themes/eduinlight-theme/template.liquid
+++ b/themes/eduinlight-theme/template.liquid
@@ -19,4 +19,7 @@
 {% endfor %}
 |
 %{A}
-%{F#FFB52A}  {{ window_title }}  %{F-}
+%{F#FFB52A}  {{ workspace.layout }}  %{F-}
+|
+%{A}
+%{F#FFB52A}  {{ window_title}}  %{F-}
