--- a/themes/eduinlight-theme/template.liquid
+++ b/themes/eduinlight-theme/template.liquid
@@ -22,4 +22,4 @@
 %{F#FFB52A}  {{ workspace.layout }}  %{F-}
 |
 %{A}
-%{F#FFB52A}  {{ window_title}}  %{F-}
+%{F#FFB52A}  {{ window_title | truncate: 50 }}  %{F-}
